Top bar and footer style fixes

--- a/src/css/footer.styl
+++ b/src/css/footer.styl
@@ -1,5 +1,6 @@
 .zooniverse-footer
   background: url("./images/zooniverse-logo-gray.png") no-repeat
+  font-size: 14px
   min-height: 200px
   padding-left: 200px
 
@@ -8,7 +9,7 @@
     margin-bottom: 1em
 
   .projects
-    font-size: 14px
+    font-size: 12px
     overflow: hidden
 
     .category
@@ -16,11 +17,14 @@
       width: 25%
 
       .category-title
+        font-size: 10px
+        font-weight: bold
+        letter-spacing: 1px
         text-transform: uppercase
 
       a
         color: inherit
-        opacity: 0.75
+        opacity: 0.67
         text-decoration: none
 
         &:hover
