--- a/src/css/top-bar.styl
+++ b/src/css/top-bar.styl
@@ -1,5 +1,5 @@
 .zooniverse-top-bar
-  background: #1c1c1c
+  background: #000
   color: #fff
   font: bold 11px "Helvetica Neue", Arial, Helvetica, sans-serif
   height: 40px
