--- a/css/zooniverse.css
+++ b/css/zooniverse.css
@@ -244,7 +244,7 @@
   z-index: 100;
 }
 .zooniverse-top-bar:before {
-  border-color: #1c1c1c #1c1c1c transparent transparent;
+  border-color: #000 #000 transparent transparent;
   border-style: solid;
   border-width: 20px 10px;
   content: "";
