--- a/src/css/top-bar.styl
+++ b/src/css/top-bar.styl
@@ -11,7 +11,7 @@
   z-index 100
 
   &:before
-    border-color: #1c1c1c #1c1c1c transparent transparent
+    border-color: #000 #000 transparent transparent
     border-style: solid
     border-width: 20px 10px
     content: ""
