--- a/src/css/profile.styl
+++ b/src/css/profile.styl
@@ -134,7 +134,7 @@
           border-color: rgba(#fff, 0.5)
 
         &.active
-          border-color: #fff
+          border-color: inherit
 
   .empty-message
     display: none
