--- a/src/css/dialog.styl
+++ b/src/css/dialog.styl
@@ -39,6 +39,7 @@
         padding: 30px
         position: relative
         text-align: left
+        text-shadow: none
         transform: translateY(-25%) rotateX(30deg) scale(0.75)
         transition: opacity 0.25s ease-in-out, transform 0.33s ease-in-out
 
