--- a/css/profile.css
+++ b/css/profile.css
@@ -117,7 +117,18 @@
   box-sizing: border-box;
   float: left;
   padding: 10px;
+  position: relative;
   width: 25%;
+}
+.zooniverse-profile .zooniverse-paginator .items .item button[name="unfavorite"] {
+  color: #fff;
+  font-size: 20px;
+  height: 1em;
+  position: absolute;
+  right: 15px;
+  text-shadow: 0 1px 1px #000;
+  top: 15px;
+  width: 1em;
 }
 .zooniverse-profile .zooniverse-paginator .items .item a {
   border: 2px solid transparent;
