--- a/src/css/profile.styl
+++ b/src/css/profile.styl
@@ -102,7 +102,18 @@
         box-sizing: border-box
         float: left
         padding: 10px
+        position: relative
         width: 25%
+
+        button[name="unfavorite"]
+          color: #fff
+          font-size: 20px
+          height: 1em
+          position: absolute
+          right: 15px
+          text-shadow: 0 1px 1px #000
+          top: 15px
+          width: 1em
 
         a
           border: 2px solid transparent
