--- a/src/css/dialog.styl
+++ b/src/css/dialog.styl
@@ -74,7 +74,12 @@
     padding: 0
 
   a
+    border: 0
     color: inherit
+    text-decoration: underline
+
+    &:hover
+      color: inherit
 
   header
     font-size: 16px
