--- a/css/footer.css
+++ b/css/footer.css
@@ -26,7 +26,8 @@
   filter: alpha(opacity=67);
   -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=67)";
 }
-.zooniverse-footer .logo svg {
+.zooniverse-footer .logo .zooniverse-logo {
+  height: 100%;
   max-height: 200px;
   width: 85%;
 }
