--- a/src/css/footer.styl
+++ b/src/css/footer.styl
@@ -18,7 +18,8 @@
     &:hover
       opacity: 0.67
 
-    svg
+    .zooniverse-logo
+      height: 100%
       max-height: 200px
       width: 85%
 
