--- a/src/css/top-bar.styl
+++ b/src/css/top-bar.styl
@@ -107,10 +107,7 @@
 
     .group
       select
-        appearance: none
-        background: transparent
-        border: 0
-        color: inherit
+        max-width: 100px
 
         &:disabled
           opacity: 0.33
