--- a/css/dialog.css
+++ b/css/dialog.css
@@ -1,6 +1,6 @@
 .zooniverse-dialog {
   display: block;
-  font-size: 12px;
+  font: 12px "Helvetica Neue", Arial, Helvetica, sans-serif;
   height: 100%;
   left: 0;
   position: fixed;
