--- a/src/css/dialog.styl
+++ b/src/css/dialog.styl
@@ -7,7 +7,7 @@
 
 .zooniverse-dialog
   display: block;
-  font-size: 12px
+  font: 12px "Helvetica Neue", Arial, Helvetica, sans-serif
   height: 100%
   left: 0
   position: fixed
