--- a/src/css/top-bar.styl
+++ b/src/css/top-bar.styl
@@ -82,8 +82,10 @@
       margin-top: -3px
       opacity: 0.33
 
+      .zooniverse-mail-icon
+        height: 0.75em
+
       .message-count
-        background: url("./images/message-envelope.png") right center no-repeat
         display: inline-block
         padding-right: 24px
 
